Platform - Set default language to English